# tetris

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
res/: crt_shader.frag  scores.txt
src/: main.cpp  pch.h
src/commands/: command.h  drop_command.h  move_command.cpp  move_command.h  rotate_command.h  skip_command.h
src/core/: config.h  game.cpp  game.h  game_state.h  input.h  scores.cpp  scores.h
src/game/: ai_controller.cpp  ai_controller.h  commands.h  grid.cpp  grid.h  input.cpp  input.h  piece.cpp  piece.h  piece_definitions.h  play_state.cpp  play_state.h
src/menu/: config_state.cpp  config_state.h  game_over.cpp  game_over.h  menu_state.cpp  menu_state.h  score_state.cpp  score_state.h
